add test requirements

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,17 @@
 requests==2.9.1
 structlog==15.3.0
 
+###############################################################################
+#                                  Tests
+###############################################################################
+pep8==1.5.7
+py==1.4.31
+pytest==3.0.2
+pytest-cov==2.3.1
+mock==2.0.0
+# deps:
+coverage==4.2
+cov-core==1.15.0
 
 ###############################################################################
 #                                Documentation
