--- a/.pylintrc
+++ b/.pylintrc
@@ -2,8 +2,9 @@
 good-names=logger, ex
 
 [DESIGN]
+min-public-methods=0
 max-parents=15
 max-args=15
 
 [MESSAGES CONTROL]
-disable=W0614
+disable=W0614, W0703
