--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 requests==2.9.1
 structlog==16.1.0
+scrapbag==0.0.3
 
 ###############################################################################
 #                                  Tests
